--- a/desafio_1_react/src/index.css
+++ b/desafio_1_react/src/index.css
@@ -13,7 +13,14 @@ body{
     display: flex;
     flex-direction: row;
     gap: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .badge{
     width: 13rem;
+}
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
